# Glue

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md
.github/workflows/: install.yml  macos.yml  ubuntu.yml
cmake/: GlueConfig.cmake.in  LarsGlueConfig.cmake.in
dependencies/Event/: CMakeLists.txt
dependencies/LHC/: CMakeLists.txt
dependencies/Visitor/: CMakeLists.txt
dependencies/duktape/: CMakeLists.txt  GlueDuktapeConfig.cmake.in
dependencies/lua/: CMakeLists.txt  GlueLuaConfig.cmake.in
example/: main.cpp
examples/: casting.cpp  duklua.cpp  duktape.cpp  glue_library.cpp  lua.cpp
examples/typescipt/: .gitignore  CMakeLists.txt  main.cpp  package-lock.json  package.json  tsconfig.json
examples/typescipt/lua/: lualib_bundle.lua  main.lua
examples/typescipt/src/: lib.d.ts  main.ts
include/: duktape
include/glue/: any_element.h  anymap.h  array.h  array_element.h  auto_value.h  class.h  class_element.h  context.h  declarations.h  definitions.h  duktape.h  element.h  element_interface.h  element_map.h  element_map_entry.h  enum.h  extension.h  glue.h  instance.h  keys.h  lua.h  map.h  types.h  value.h  view.h
include/glue/detail/: interface.h  reference_visitable.h
include/glue/elements/: array_element.h  class_element.h
include/lars/: duktape.h  duktape_glue.h  glue.h  lua.h  lua_glue.h
include/lars/glue/: definitions.h  duktape.h  glue.h  lua.h
lib/ducktape/: duk_config.h  duktape.cpp
lib/duktape/: CMakeLists.txt
lib/duktape/include/duktape/: duk_config.h  duktape.h
lib/lua/: CMakeLists.txt  loslib.c
lib/lua/include/: lua.h  luaconf.h
source/: any_element.cpp  anymap.cpp  class_element.cpp  context.cpp  declarations.cpp  definitions.cpp  duktape.cpp  duktape_glue.cpp  element.cpp  element_map.cpp  element_map_entry.cpp  extension.cpp  glue.cpp  lua.cpp  lua_glue.cpp  value.cpp
test/: CMakeLists.txt
test/source/: any_element.cpp  array.cpp  array_element.cpp  class.cpp  classValue.cpp  class_element.cpp  context.cpp  declarations.cpp  element.cpp  enum.cpp  example.cpp  map.cpp  value.cpp  view.cpp
tests/: CMakeLists.txt  array_element.cpp  class_element.cpp  declarations.cpp  definitions.cpp  duklua.cpp  duktape_glue.cpp  element.cpp  extension.cpp  lua_glue.cpp  test.lua
tests/catch2/: CMakeLists.txt
